fix menu li margin on mobile

--- a/src/app/screen/screen.component.scss
+++ b/src/app/screen/screen.component.scss
@@ -24,7 +24,7 @@
 
 .menu > li {
     float: left;
-    margin-left: 0.75rem;
+    margin: 0 0 0.75rem 0.75rem;
 }
 
 .content {
